fix modal z-index

--- a/src/components/LogOutBtn/LogOutBtn.module.css
+++ b/src/components/LogOutBtn/LogOutBtn.module.css
@@ -25,6 +25,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 2000;
 }
 
 .modalContent {
@@ -40,6 +41,7 @@
     justify-content: center;
     align-items: center;
     position: relative;
+    z-index: 2001;
 }
 
 .petIcon {
